--- a/_layouts/construction.html
+++ b/_layouts/construction.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 {%- include head.html -%}
 <body class="construction d-flex flex-column justify-content-center align-items-center">
-    <h1 class="glitch" data-text="&lt;DevFSA&gt;">&lt;DevFSA&gt;</h1>
+    <h1 class="glitch"></h1>
     <p>&middot; <a href="/assets/docs/ManifestoDevFSAMeetups.pdf" target="_blank">Meetups manifesto</a> &middot;</p>
 </body>
 </html>
