--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -9,20 +9,48 @@ body.construction {
   background: linear-gradient(135deg, #3f1567 0%, #c11c7a 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3f1567', endColorstr='#c11c7a', GradientType=1);
   color: #ffffff;
-  height: 100vh;
+  min-height: 100vh;
+
+  a {
+    color: white;
+  }
 
   @mixin glitch-logo() {
     background: url('/assets/img/devfsa-logo-03.svg') no-repeat;
-    width: 500px;
-    height: 80px;
-    background-size: 500px 80px;
+    width: 31.25rem;
+    height: 5rem;
+    background-size: 31.25rem 5rem;
   }
 
   .glitch {
-    font-size: 5rem;
-    font-style: italic;
     position: relative;
     @include glitch-logo();
+
+    &:before {
+      content: ' ';
+      @include glitch-logo();
+      position: absolute;
+      left: -0.125rem;
+      top: 0;
+      -webkit-filter: drop-shadow(0.0625rem 0 blue);
+      filter: drop-shadow(0.0625rem 0 blue);
+      overflow: hidden;
+      clip: rect(0, 900px, 0, 0);
+      animation: noise-anim-2 3s infinite linear alternate-reverse;
+    }
+
+    &:after {
+      content: ' ';
+      @include glitch-logo();
+      position: absolute;
+      left: 0.125rem;
+      top: 0;
+      -webkit-filter: drop-shadow(-0.0625rem 0 red);
+      filter: drop-shadow(-0.0625rem 0 red);
+      overflow: hidden;
+      clip: rect(0, 900px, 0, 0);
+      animation: noise-anim 2s infinite linear alternate-reverse;
+    }
   }
 
   @keyframes noise-anim {
@@ -32,18 +60,6 @@ body.construction {
         clip: rect(random(100)+px, 9999px, random(100)+px, 0);
       }
     }
-  }
-  .glitch:after {
-    content: ' ';
-    @include glitch-logo();
-    position: absolute;
-    left: 2px;
-    top: 0;
-    -webkit-filter: drop-shadow(-1px 0 red);
-    filter: drop-shadow(-1px 0 red);
-    overflow: hidden;
-    clip: rect(0, 900px, 0, 0);
-    animation: noise-anim 2s infinite linear alternate-reverse;
   }
 
   @keyframes noise-anim-2 {
@@ -55,20 +71,4 @@ body.construction {
     }
   }
 
-  .glitch:before {
-    content: ' ';
-    @include glitch-logo();
-    position: absolute;
-    left: -2px;
-    top: 0;
-    -webkit-filter: drop-shadow(1px 0 blue);
-    filter: drop-shadow(1px 0 blue);
-    overflow: hidden;
-    clip: rect(0, 900px, 0, 0);
-    animation: noise-anim-2 3s infinite linear alternate-reverse;
-  }
-
-  a {
-    color: white;
-  }
 }
