--- a/css/style.css
+++ b/css/style.css
@@ -48,191 +48,146 @@ body {
   grid-template-columns: 1fr 2fr;
   grid-gap: 2rem;
 }
-.header {
-  position: absolute;
+
+header {
+  display: flex;
+  flex-flow: row nowrap;
+  position: fixed;
+  background: var(--color-primary);
+  height: 5rem;
+  border-bottom: 0;
+  margin: 0 auto 0 auto;
+  padding: 0 15%;
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
-  background-color: var(--color-primary);
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 15%;
-}
-.logo-glitch {
-  position: relative;
-  background: url("../img/devfsa-logo.svg") no-repeat;
-  width: 8.25rem;
-  height: 2rem;
-  background-size: 8.25rem 2rem;
-}
-.logo-glitch:before {
-  content: " ";
-  background: url("../img/devfsa-logo.svg") no-repeat;
-  width: 8.25rem;
-  height: 2rem;
-  background-size: 8.25rem 2rem;
-  position: absolute;
-  left: -0.125rem;
-  top: 0;
-  -webkit-filter: drop-shadow(0.0825rem 0 blue);
-  filter: drop-shadow(0.0825rem 0 blue);
-  overflow: hidden;
-  clip: rect(0, 900px, 0, 0);
-  animation: noise-anim-2 3s infinite linear alternate-reverse;
-}
-.logo-glitch:after {
-  content: " ";
-  background: url("../img/devfsa-logo.svg") no-repeat;
-  width: 8.25rem;
-  height: 2rem;
-  background-size: 8.25rem 2rem;
-  position: absolute;
-  left: 0.125rem;
-  top: 0;
-  -webkit-filter: drop-shadow(-0.0825rem 0 red);
-  filter: drop-shadow(-0.0825rem 0 red);
-  overflow: hidden;
-  clip: rect(0, 900px, 0, 0);
-  animation: noise-anim 2s infinite linear alternate-reverse;
 }
 
-@keyframes noise-anim {
-  0% {
-    clip: rect(50px, 9999px, 29px, 0);
-  }
-  5% {
-    clip: rect(1px, 9999px, 86px, 0);
-  }
-  10% {
-    clip: rect(49px, 9999px, 56px, 0);
-  }
-  15% {
-    clip: rect(76px, 9999px, 20px, 0);
-  }
-  20% {
-    clip: rect(97px, 9999px, 95px, 0);
-  }
-  25% {
-    clip: rect(31px, 9999px, 46px, 0);
-  }
-  30% {
-    clip: rect(32px, 9999px, 48px, 0);
-  }
-  35% {
-    clip: rect(100px, 9999px, 72px, 0);
-  }
-  40% {
-    clip: rect(43px, 9999px, 11px, 0);
-  }
-  45% {
-    clip: rect(65px, 9999px, 59px, 0);
-  }
-  50% {
-    clip: rect(97px, 9999px, 55px, 0);
-  }
-  55% {
-    clip: rect(92px, 9999px, 28px, 0);
-  }
-  60% {
-    clip: rect(100px, 9999px, 59px, 0);
-  }
-  65% {
-    clip: rect(48px, 9999px, 24px, 0);
-  }
-  70% {
-    clip: rect(66px, 9999px, 72px, 0);
-  }
-  75% {
-    clip: rect(91px, 9999px, 12px, 0);
-  }
-  80% {
-    clip: rect(13px, 9999px, 78px, 0);
-  }
-  85% {
-    clip: rect(46px, 9999px, 19px, 0);
-  }
-  90% {
-    clip: rect(68px, 9999px, 41px, 0);
-  }
-  95% {
-    clip: rect(20px, 9999px, 13px, 0);
-  }
-  100% {
-    clip: rect(43px, 9999px, 14px, 0);
-  }
+header .logo {
+  display: flex;
+  align-items: center;
 }
-@keyframes noise-anim-2 {
-  0% {
-    clip: rect(60px, 9999px, 75px, 0);
+
+nav {
+  flex:1 auto;
+}
+nav ul {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 5rem auto 0 auto;
+  height: calc(100% - 5rem);
+  width: 100%;
+  flex-flow: column nowrap;
+  align-content: stretch;
+  display: none;
+  padding: 0;
+}
+nav ul a {
+  flex: 1;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  display: flex;
+  color: rgba(255,255,255,.7);
+}
+nav ul a:hover {
+  color: rgba(255,255,255,1);
+}
+nav ul > li {
+  flex: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  text-align: center;
+  background: var(--color-primary);
+}
+
+#menu-btn {
+  display: none;
+}
+/*Show menu when invisible checkbox is checked*/
+#menu-btn:checked ~ ul {
+  display: flex;
+}
+.menu-icon {
+  width: 5rem;
+  height: 5rem;
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: right;
+}
+.navicon:after,
+.navicon:before {
+content: "";
+position: absolute;
+left: 0;
+top: -9px;
+}
+.navicon:after{
+top: 9px;
+}
+.navicon {
+position: relative;
+display: block;
+}
+.navicon,
+.navicon:after,
+.navicon:before {
+width: 100%;
+height: 5px;
+background-color: white;
+transition: all 0.3s;
+backface-visibility: hidden;
+border-radius: 2px;
+}
+/* on menu activation */
+#menu-btn:checked ~ .menu-icon>.navicon {
+background-color: transparent;
+}
+#menu-btn:checked ~ .menu-icon>.navicon:before {
+transform: rotate(45deg) translate(5px, 5px);
+}
+#menu-btn:checked ~ .menu-icon>.navicon:after {
+transform: rotate(-45deg) translate(7px, -8px);
+}
+
+@media only screen and (min-width: 1080px) {
+  .menu-icon {
+    display: none;
   }
-  5% {
-    clip: rect(27px, 9999px, 52px, 0);
+
+  nav ul {
+    position: initial;
+    display: flex;
+    flex-flow: row nowrap;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 5rem;
+    margin-top: 0;
   }
-  10% {
-    clip: rect(6px, 9999px, 41px, 0);
+  nav ul > li {
+    flex: 1 0 auto;
+    align-items: initial;
   }
-  15% {
-    clip: rect(52px, 9999px, 58px, 0);
+  nav ul a {
+    font-size: 1rem;
+    width: auto;
+    justify-content: flex-end;
+    color: rgba(255,255,255,.7);
   }
-  20% {
-    clip: rect(19px, 9999px, 75px, 0);
-  }
-  25% {
-    clip: rect(100px, 9999px, 8px, 0);
-  }
-  30% {
-    clip: rect(50px, 9999px, 18px, 0);
-  }
-  35% {
-    clip: rect(32px, 9999px, 100px, 0);
-  }
-  40% {
-    clip: rect(77px, 9999px, 7px, 0);
-  }
-  45% {
-    clip: rect(70px, 9999px, 20px, 0);
-  }
-  50% {
-    clip: rect(49px, 9999px, 16px, 0);
-  }
-  55% {
-    clip: rect(48px, 9999px, 29px, 0);
-  }
-  60% {
-    clip: rect(19px, 9999px, 8px, 0);
-  }
-  65% {
-    clip: rect(19px, 9999px, 97px, 0);
-  }
-  70% {
-    clip: rect(59px, 9999px, 41px, 0);
-  }
-  75% {
-    clip: rect(61px, 9999px, 74px, 0);
-  }
-  80% {
-    clip: rect(91px, 9999px, 38px, 0);
-  }
-  85% {
-    clip: rect(46px, 9999px, 42px, 0);
-  }
-  90% {
-    clip: rect(72px, 9999px, 35px, 0);
-  }
-  95% {
-    clip: rect(63px, 9999px, 6px, 0);
-  }
-  100% {
-    clip: rect(56px, 9999px, 74px, 0);
+  nav ul a:hover {
+    color: rgba(255,255,255,1);
   }
 }
 
 .meetup-hero {
   background-color: white;
-  padding: 10rem 15% 1rem 15%
+  padding: 7rem 15% 1rem 15%
 }
 .meetup-hero .btn-primary {
     margin-right: 1rem;
@@ -453,19 +408,12 @@ footer a:hover {
   .keynote-title {
     margin-bottom: 1rem;
   }
-  .header {
-    padding: 0 5%;
-    overflow-y: scroll;
-  }
   .grid-hero > div:first-child {
     text-align: center;
   }
   .meetup-hero .btn-primary {
     margin-right: 0;
     margin-bottom: 1rem;
-  }
-  .nav {
-    display: table;
   }
   .support > .container {
     justify-content: initial;
