--- a/css/style.css
+++ b/css/style.css
@@ -123,37 +123,37 @@ nav ul > li {
 }
 .navicon:after,
 .navicon:before {
-content: "";
-position: absolute;
-left: 0;
-top: -9px;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -9px;
 }
 .navicon:after{
-top: 9px;
+  top: 9px;
 }
 .navicon {
-position: relative;
-display: block;
+  position: relative;
+  display: block;
 }
 .navicon,
 .navicon:after,
 .navicon:before {
-width: 100%;
-height: 5px;
-background-color: white;
-transition: all 0.3s;
-backface-visibility: hidden;
-border-radius: 2px;
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+  border-radius: 2px;
 }
 /* on menu activation */
 #menu-btn:checked ~ .menu-icon>.navicon {
-background-color: transparent;
+  background-color: transparent;
 }
 #menu-btn:checked ~ .menu-icon>.navicon:before {
-transform: rotate(45deg) translate(5px, 5px);
+  transform: rotate(45deg) translate(5px, 5px);
 }
 #menu-btn:checked ~ .menu-icon>.navicon:after {
-transform: rotate(-45deg) translate(7px, -8px);
+  transform: rotate(-45deg) translate(7px, -8px);
 }
 
 @media only screen and (min-width: 1080px) {
@@ -189,8 +189,11 @@ transform: rotate(-45deg) translate(7px, -8px);
   background-color: white;
   padding: 7rem 15% 1rem 15%
 }
-.meetup-hero .btn-primary {
-    margin-right: 1rem;
+.meetup-hero .controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .meetup-hero .btn-secondary {
   color: var(--color-text);
@@ -393,7 +396,7 @@ footer a:hover {
 .keynote-vote:hover {
   color: var(--color-black);
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .grid-hero,
   .grid-2,
   .grid-3 {
@@ -405,6 +408,10 @@ footer a:hover {
   .meetup-hero {
     padding: 6rem 5% 2rem 5%;
   }
+  .meetup-hero .controls {
+    margin-bottom: 1rem;
+    justify-content: space-evenly;
+  }
   .keynote-title {
     margin-bottom: 1rem;
   }
@@ -413,7 +420,6 @@ footer a:hover {
   }
   .meetup-hero .btn-primary {
     margin-right: 0;
-    margin-bottom: 1rem;
   }
   .support > .container {
     justify-content: initial;
@@ -435,13 +441,8 @@ and (max-device-width : 768px){
     grid-gap: 2rem;
   }
 
-  .btn-primary, .btn-secondary{
-    margin: 10px 0;
+  .btn-primary, .btn-secondary {
     text-align: center;
-  }
-
-  .btn-secondary{
-    height: 4rem;
   }
 
   .support > .container {
@@ -461,19 +462,24 @@ and (max-device-width : 768px){
 
 @media only screen
 and (min-device-width : 768px)
-and (max-device-width : 1024px){
+and (max-device-width : 1200px){
   .keynote-container .grid-2 {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 2rem;
   }
 
-  .meetup-hero .btn-secondary {
-    margin: 10px 0;
-  }
-
   footer p {
     text-align: center;
+  }
+}
+
+@media only screen
+and (min-device-width : 769px)
+and (max-device-width : 1335px) {
+  .meetup-hero .controls .btn-primary {
+    margin-bottom: 1rem;
+    margin-right: 1rem;
   }
 }
 
