--- a/css/style.css
+++ b/css/style.css
@@ -526,8 +526,8 @@ and (max-device-width : 1200px){
 }
 
 @media only screen
-and (min-device-width : 769px)
-and (max-device-width : 1335px) {
+and (min-width : 769px)
+and (max-width : 1335px) {
   .meetup-hero .controls .btn-primary {
     margin-bottom: 1rem;
     margin-right: 1rem;
