--- a/css/style.css
+++ b/css/style.css
@@ -163,10 +163,11 @@ nav ul > li {
 .meetup-hero .controls {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
 }
-.meetup-hero .btn-secondary {
+.meetup-hero .controls .btn-primary {
+  margin-right: 1rem;
+}
+.meetup-hero .controls .btn-secondary {
   color: var(--color-text);
 }
 .meetup-date {
@@ -514,7 +515,12 @@ and (max-width : 1200px){
 
 @media only screen
 and (min-width : 769px)
-and (max-width : 1335px) {
+and (max-width : 1376px) {
+  .meetup-hero .controls {
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
   .meetup-hero .controls .btn-primary {
     margin-bottom: 1rem;
     margin-right: 1rem;
